--- a/fusor-ember-cli/app/templates/configure-environment.hbs
+++ b/fusor-ember-cli/app/templates/configure-environment.hbs
@@ -2,12 +2,18 @@
   <div class='col-md-9'>
 
     <div style='text-align:right;margin-top:15px;'>
-      <button class='btn btn-success' {{action 'showModal' 'newEnvironmentModal'}}>Add Environment</button>
+      <button class='btn btn-success' {{action 'showModal' 'newEnvironmentModal'}}>
+        Add Environment Path
+      </button>
     </div>
+
+    {{text-f value=organization_id}}
+    <button {{action 'submit'}}>Submit</button>
+    {{organization_id}}
 
     <div class="path-selector">
         <ul class="path-list">
-          {{#each env in environments itemController="environment"}}
+          {{#each env in filteredEnvironments itemController="lifecycle-environment"}}
             {{env-path-list-item env=env selectedEnvironment=selectedEnvironment}}
           {{/each}}
           <li class="path-list-item">
@@ -19,7 +25,7 @@
     </div>
 
     {{#if hasNewEnvs}}
-      {{#each env in newenvs itemController="environment"}}
+      {{#each env in model itemController="lifecycle-environment"}}
       <div class="path-selector">
         <ul class="path-list">
           <li class="path-list-item">
@@ -37,7 +43,6 @@
       </div>
       {{/each}}
     {{/if}}
-
 
     <br />
     <br />
