--- a/fusor-ember-cli/app/templates/engine/discovered-host.hbs
+++ b/fusor-ember-cli/app/templates/engine/discovered-host.hbs
@@ -3,7 +3,7 @@
 <!-- NOTE: This will assign the <strong>Self Hosted Engine</strong> hostgroup to the selected hosts.
  -->
 <strong>{{avialableHosts.length}}</strong> hosts found
-{{bs-button title="Refresh Discovered Hosts" type='default'}}
+{{!bs-button title="Refresh Discovered Hosts" type='default'}}
 <br />
 <br />
 <strong>{{cntSelectedHosts}}</strong> {{hostInflection}} selected
