--- a/fusor-ember-cli/app/templates/hypervisor/discovered-host.hbs
+++ b/fusor-ember-cli/app/templates/hypervisor/discovered-host.hbs
@@ -1,13 +1,14 @@
 <!-- NOTE: This will assign the <strong>Self Hosted Engine</strong> hostgroup to the selected hosts.
  -->
- TODO - LIMIT SELCTION TO ONE ONLY<BR />
+hypervisorHostId {{hypervisorHostId}}
+<br />
 
 <strong>{{model.length}}</strong> hosts found
 {{bs-button title="Refresh Discovered Hosts" type='default'}}
 <br />
 <br />
 <strong>{{cntSelectedHosts}}</strong> {{hostInflection}} selected
-<br />
+<br />{{idChecked}}
 <br />
 <table class="table table-bordered table-striped small">
   <thead>
