--- a/fusor-ember-cli/app/templates/engine.hbs
+++ b/fusor-ember-cli/app/templates/engine.hbs
@@ -8,9 +8,9 @@
           <a>Discovered Hosts</a>
         {{/link-to}}
 
-        {{#link-to 'engine.new-host' tagName='li'}}
-          <a>New VM</a>
-        {{/link-to}}
+        {{!#link-to 'engine.new-host' tagName='li'}}
+          <!-- <a>New VM</a> -->
+        {{!/link-to}}
     </ul>
     <div class="col-md-12">
           {{outlet}}
