--- a/fusor-ember-cli/app/templates/hypervisor/discovered-host.hbs
+++ b/fusor-ember-cli/app/templates/hypervisor/discovered-host.hbs
@@ -1,14 +1,12 @@
 <!-- NOTE: This will assign the <strong>Self Hosted Engine</strong> hostgroup to the selected hosts.
  -->
-hypervisorHostId {{hypervisorHostId}}
-<br />
 
 <strong>{{model.length}}</strong> hosts found
-{{bs-button title="Refresh Discovered Hosts" type='default'}}
+{{!bs-button title="Refresh Discovered Hosts" type='default'}}
 <br />
 <br />
-<strong>{{cntSelectedHosts}}</strong> {{hostInflection}} selected
-<br />{{idChecked}}
+<strong>{{cntSelectedHosts}}</strong> {{hostInflection}} selected ({{idChecked}})
+<br />
 <br />
 <table class="table table-bordered table-striped small">
   <thead>
