hypervisor1 and engine1

--- a/fusor-ember-cli/app/templates/review/progress.hbs
+++ b/fusor-ember-cli/app/templates/review/progress.hbs
@@ -1,6 +1,19 @@
 <div class='row'>
   <div class='col-md-8 col-md-offset-1'>
 
+    <br />
+
+    <div class='alert alert-success'>
+      INSTALLING: This is currently not hooked up to dynflow to track progress.<br />
+      Go to Virt Manager to view installation progress.
+    </div>
+
+    {{#if installationInProgress}}
+      Installing ({{prog}}% complete)
+      {{bs-progress progressBinding="prog" type="success" stripped=true animated=true}}
+    {{/if}}
+
+<!--
     <div class='row'>
       <h3>Red Hat Enterprise Virtualization (25% complete, 3 hours 15 minutes remaining)</h3>
       <div class='col-md-offset-1'>
@@ -17,16 +30,10 @@
       <h3>Red Hat Enterprise Linux OpenStack Platform</h3>
       <div class='col-md-offset-1'>
       </div>
-    </div>
+    </div> -->
 
     <br />
     <br />
-    <br />
-    <br />
-
-    <div class='pull-right'>
-      {{#link-to 'deployments' class='btn btn-primary' disabled=true}}Next{{/link-to}}
-    </div>
 
 
   </div>
