--- a/fusor-ember-cli/app/templates/deployment.hbs
+++ b/fusor-ember-cli/app/templates/deployment.hbs
@@ -3,28 +3,32 @@
 
 <div class="wizard-block">
 
+  <div class="white-wizard-line"></div>
   <div class="wizard-line"></div>
 
   <ul class="wizard">
-    {{wizard-item num=1 name=nameSatellite routeName='satellite'}}
+    {{wizard-item num=1 name=nameSatellite routeName='satellite' isDisabled=false}}
 
     {{#if isRhev}}
-      {{wizard-item num=stepNumberRhev name=nameRhev routeName='rhev'}}
+      {{wizard-item num=stepNumberRhev name=nameRhev routeName='rhev' isDisabled=isDisabledRhev}}
     {{/if}}
 
     {{#if isOpenStack}}
-      {{wizard-item num=stepNumberOpenstack name=nameOpenStack routeName='openstack'}}
+      {{wizard-item num=stepNumberOpenstack name=nameOpenStack routeName='openstack' isDisabled=isDisabledOpenstack}}
     {{/if}}
 
     {{#if isCloudForms}}
-      {{wizard-item num=stepNumberCloudForms name=nameCloudForms routeName='cloudforms'}}
+      {{wizard-item num=stepNumberCloudForms name=nameCloudForms routeName='cloudforms' isDisabled=isDisabledCloudForms}}
     {{/if}}
 
+    {{wizard-item num=88 name='Containers' routeName='cloudforms' isDisabled=false}}
+
+
     {{#unless isUpstream}}
-      {{wizard-item num=stepNumberSubscriptions name='Subscriptions' routeName='subscriptions' disabled=disableReview}}
+      {{wizard-item num=stepNumberSubscriptions name='Subscriptions' routeName='subscriptions' isDisabled=isDisabledSubscriptions}}
     {{/unless}}
 
-    {{wizard-item num=stepNumberReview name='Review' routeName='review' disabled=disableReview}}
+    {{wizard-item num=stepNumberReview name='Review' routeName='review' isDisabled=isDisabledReview}}
   </ul>
 </div>
 
