--- a/fusor-ember-cli/app/templates/rhev.hbs
+++ b/fusor-ember-cli/app/templates/rhev.hbs
@@ -7,21 +7,21 @@
       {{!/link-to}}
 
       {{#link-to 'hypervisor' tagName='li'}}
-        <a>{{hypervisorTabName}}</a>
+        <a>2A. {{hypervisorTabName}}</a>
       {{/link-to}}
 
       {{#unless isSelfHost}}
       {{#link-to 'engine' tagName='li'}}
-        <a>Engine</a>
+        <a>2B. Engine</a>
       {{/link-to}}
       {{/unless}}
 
       {{#link-to 'rhev-options' tagName='li'}}
-        <a>Configuration</a>
+        <a>2C. Configuration</a>
       {{/link-to}}
 
       {{#link-to 'storage' tagName='li'}}
-        <a>Storage</a>
+        <a>2D. Storage</a>
       {{/link-to}}
 
       {{!#link-to 'networking' tagName='li'}}
