--- a/fusor-ember-cli/app/styles/katello/_katello_colors.scss
+++ b/fusor-ember-cli/app/styles/katello/_katello_colors.scss
@@ -76,7 +76,7 @@ $border_color:              #d7d7d7;
 $table-border_color:        $border_color;
 
 @mixin widget-background-color {
-  @include background-image(linear-gradient(top, #F9F9F9, #E4E4E4));
+  background-image: linear-gradient(top, #F9F9F9, #E4E4E4);
 }
 
 $widget-border-color: #C9C9C9;
