--- a/fusor-ember-cli/app/styles/katello/_katello_mixins.scss
+++ b/fusor-ember-cli/app/styles/katello/_katello_mixins.scss
@@ -39,7 +39,7 @@
   &:hover {
     background: $breadcrumbbg_color !important;
     color: #000;
-    @include text-shadow(none);
+    text-shadow: none;
 
     &:after { border-left-color: $breadcrumbbg_color !important; }
   }
@@ -49,7 +49,7 @@
   &:hover {
     background: $listhover_color !important;
     color: $white_color;
-    @include text-shadow(2px 2px 2px rgba(0,0,0,0.6));
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.6);
     &:after {
       border-left-color: $listhover_color !important;
     }
@@ -75,14 +75,4 @@
     // a selected crumb that is editable... hover effect disabled, but cursor will be a hand
     @include crumb-disable-hover-selected;
   }
-}
-
-@mixin product-sprite {
-  background: $base_product_icon;
-  height: 16px;
-  width: 16px;
-  margin-top: 2px;
-  margin-left: 4px;
-  margin-right: 4px;
-  float: left;
 }
