--- a/fusor-ember-cli/app/styles/katello/dashboard.scss
+++ b/fusor-ember-cli/app/styles/katello/dashboard.scss
@@ -28,14 +28,14 @@ $col_width: (($static_width) * 0.5);
     $header_height: 34px;
     $width: $col_width - 85;
 
-    @include border-radius(3px);
+    border-radius: 3px;
     height: $height + $header_height;
     overflow: hidden;
     background-color: $lightergrey_color;
     border:1px solid $border_color;
     padding: 10px 10px 0 15px;
     margin-bottom: 10px;
-    @include background-image(linear-gradient(#F7F7F7, #EEEEEE));
+    background-image: linear-gradient(#F7F7F7, #EEEEEE);
     position: relative;
     h1, h2, h3 {
         margin-top: 3px;
@@ -61,13 +61,12 @@ $col_width: (($static_width) * 0.5);
     #dashboard_subscriptions {
       height: $height;
       .sub_count {
-        font-family: $headlinefont;
         font-size: 100%;
       }
       .sys_count {
         font-size: 100%;
         font-weight: bold;
-        @include text-shadow(0 1px 0 rgba($white_color, 1));
+        text-shadow: 0 1px 0 rgba($white_color, 1);
         margin-left: 20px;
       }
       #sub_graph {
@@ -136,7 +135,7 @@ $col_width: (($static_width) * 0.5);
         font-size: 95%;
       }
       li.center-col {
-        @include border-radius(0);
+        border-radius: 0;
         border-left: 1px solid #d8d8d8;
         border-right: 1px solid #d8d8d8;
       }
@@ -188,7 +187,6 @@ $col_width: (($static_width) * 0.5);
           min-height: inherit;
           text-align: left;
           font-size: 85%;
-          font-family: $headlinefont;
           color: lighten($header_color,20%);
           text-transform: uppercase;
           white-space:nowrap;
@@ -202,7 +200,6 @@ $col_width: (($static_width) * 0.5);
           font-weight: bold;
           margin-top:5px;
           font-size: 85%;
-          font-family: $headlinefont;
           color: lighten($header_color,20%);
           text-transform: uppercase;
       }
@@ -244,22 +241,6 @@ $col_width: (($static_width) * 0.5);
         display: inline-block;
         width: $width * .05;
         padding-left: 2px;
-      }
-      .collapsed {
-        float: left;
-        width: 16px;
-        height: 16px;
-        background: $arrow_min_img_small;
-        margin-top: 2px;
-        margin-right: 2px;
-      }
-      .expanded {
-        float: left;
-        width: 16px;
-        height: 16px;
-        background: $arrow_max_img_small;
-        margin-top: 2px;
-        margin-right: 2px;
       }
     }
 
@@ -333,14 +314,6 @@ $col_width: (($static_width) * 0.5);
         height: 15px;
 
       }
-      .check_icon {
-        display: inline;
-        margin-right: 2px;
-      }
-      .error_icon {
-        display: inline;
-        margin-right: 2px;
-      }
 
     }
 
@@ -411,7 +384,6 @@ $col_width: (($static_width) * 0.5);
           min-height: inherit;
           text-align: left;
           font-size: 85%;
-          font-family: $headlinefont;
           color: lighten($header_color,20%);
           text-transform: uppercase;
           white-space:nowrap;
@@ -425,7 +397,6 @@ $col_width: (($static_width) * 0.5);
           font-weight: bold;
           margin-top:5px;
           font-size: 85%;
-          font-family: $headlinefont;
           color: lighten($header_color,20%);
           text-transform: uppercase;
       }
@@ -471,38 +442,14 @@ $col_width: (($static_width) * 0.5);
       margin-right: 15px;
 
     }
-    .check_icon {
-      width: 16px;
-      height: 16px;
-      @include action-icon($check_icon_black);
-      margin-left: 0px;
-    }
-    .error_icon {
-      width: 16px;
-      @include action-icon($warning_icon_black);
-      margin-left: 0px;
-    }
-    .gears_icon {
-      width: 16px;
-      @include action-icon($gears_icon_black);
-      margin-left: 0px;
-    }
-    .clock_icon {
-      width: 16px;
-      @include action-icon($clock_icon_black);
-      margin-left: 0px;
-    }
     .widget {
-        overflow: hidden;
-        height: $height;
+        overflow: auto;
+        //height: $height;
         width: $width;
         list-style: None;
         li {
           margin-bottom: 5px;
-          @include border-radius(10px);
-          &:hover {
-            background-color: $g1;
-          }
+          border-radius: 10px;
         }
         h5 {
           margin-bottom: -1px;
@@ -523,21 +470,22 @@ $col_width: (($static_width) * 0.5);
     height: 24px;
     width: 44px;
     margin: 0;
-    @include border-radius(23px);
+    border-radius: 23px;
     border:1px solid $border_color;
     background: #f0f0f0;
     position: relative;
     z-index: 0;
+
+    &.button {
+      padding: 3px 8px;
+    }
+
     &:hover, &.active{
         background: #dcdcdc;
     }
     span {
-        height: 16px;
-        width: 32px;
-        display: block;
-        position: relative;
-        background: $gear_icon_dark;
-        margin: 0;
+        margin-left: 7px;
+        font-size: 14px;
     }
 
 }
