--- a/fusor-ember-cli/app/styles/katello/widgets/_scrollpane.scss
+++ b/fusor-ember-cli/app/styles/katello/widgets/_scrollpane.scss
@@ -8,15 +8,15 @@
 
   .jspDrag {
       background: $kselected_color !important;
-      @include border-radius(10px);
-      @include opacity(0.3);
+      border-radius: 10px;
+      opacity: 0.3;
   }
 
 
   .jspTrack {
     .jspActive, .jspHover, .jspDrag:hover {
        background: $jScrollPane-bar_color;
-       @include opacity(1);
+       opacity: 0.3;
      }
    }
 
