--- a/fusor-ember-cli/app/styles/katello/widgets/tabs.scss
+++ b/fusor-ember-cli/app/styles/katello/widgets/tabs.scss
@@ -3,7 +3,6 @@
 
 /* override some of the jQuery UI stuff */
 .ui-widget-header {
-    font-family: $headlinefont;
     border: 0 none;
 }
 .ui-widget-content {
@@ -21,7 +20,7 @@
       cursor: pointer;
       text-transform: none;
       text-decoration: none;
-      @include text-shadow(0 1px 0 rgba($white_color, 1));
+      text-shadow: 0 1px 0 rgba($white_color, 1);
       display: block;
       margin: 0;
       padding: 8px 16px 6px;
@@ -50,7 +49,7 @@
     cursor: pointer;
     text-transform: none;
     text-decoration: none;
-    @include text-shadow(0 1px 0 rgba($white_color, 1));
+    text-shadow: 0 1px 0 rgba($white_color, 1);
     display: block;
     margin: 0;
     float: left;
@@ -66,18 +65,5 @@
     //overflow: none;
     margin-right: 15px;
 
-  }
-  .success_icon {
-    width: 16px;
-    height: 16px;
-    @include action-icon($check_icon_black);
-    margin-left: 0px;
-  }
-
-  .failure_icon {
-    width: 16px;
-    height: 16px;
-    @include action-icon($error_icon_black);
-    margin-left: 0px;
   }
 }
