UI changes per wireframes, server mocks and fixture data, and isLiveBackendMode: false

--- a/fusor-ember-cli/app/templates/application.hbs
+++ b/fusor-ember-cli/app/templates/application.hbs
@@ -8,15 +8,15 @@
   {{/if}}
 {{/if}}
 
-{{upstream-downstream isUpstream=isUpstream}}
+{{!upstream-downstream isUpstream=isUpstream}}
 
-<div class="pull-right">
-      <a {{action 'toggleSideMenu'}} class="uxnotes">
+<!-- <div class="pull-right">
+      <a {{!action 'toggleSideMenu'}} class="uxnotes">
       UX Notes &nbsp;<i class="fa fa-bars fa-lg white"></i>
       </a>
 </div>
-
-{{render 'side-menu'}}
+ -->
+{{!render 'side-menu'}}
 
 <div {{bind-attr class="isContainer:container:container-fluid"}}>
   {{outlet}}
