--- a/fusor-ember-cli/app/templates/cloudforms.hbs
+++ b/fusor-ember-cli/app/templates/cloudforms.hbs
@@ -3,7 +3,7 @@
   <ul class="nav nav-pills nav-stacked col-md-3">
 
       {{#link-to 'where-install' tagName='li'}}
-        <a>{{stepNumberCloudForms}}A. Where to Install</a>
+        <a>{{stepNumberCloudForms}}A. Installation Location</a>
       {{/link-to}}
   </ul>
 
