--- a/fusor-ember-cli/app/templates/hypervisor/discovered-host.hbs
+++ b/fusor-ember-cli/app/templates/hypervisor/discovered-host.hbs
@@ -1,35 +1,24 @@
-
-
-<strong>{{model.length}}</strong> hosts found
-{{!bs-button title="Refresh Discovered Hosts" type='default'}}
-<br />
-<br />
-<strong>{{cntSelectedHosts}}</strong> {{hostInflection}} selected ({{idChecked}})
+<strong>{{cntSelectedHosts}}</strong> of <strong>{{availableHosts.length}}</strong>
+available hosts selected {{!idChecked}}
 <br />
 <br />
 <table class="table table-bordered table-striped small">
   <thead>
     <tr>
       <th> {{input type="checkbox" checked=allChecked}}</th>
-      <th> Name </th>
       <th> MAC </th>
-      <th> Vendor </th>
-      <th> CPU </th>
+      <th> CPU's </th>
       <th> Memory </th>
     </tr>
   </thead>
 
   <tbody>
-  {{#each host in controller.model itemController="host"}}
+  {{#each host in availableHosts itemController="host"}}
     <tr>
       <td> {{input type="checkbox" name="isSelectedAsHypervisor" checked=host.isSelectedAsHypervisor}}</td>
-      <td> {{host.name}} </td>
       <td> {{host.mac}} </td>
-      <td> {{host.vendor}} </td>
-      <td> {{host.cpu}} </td>
+      <td> {{host.cpus}} </td>
       <td> {{host.memory}} </td>
-      <td> {{host.isSelectedAsHypervisor}} </td>
-      <td> {{host.isSelectedAsEngine}} </td>
     </tr>
   {{/each}}
   </tbody>
