--- a/fusor-ember-cli/app/templates/review.hbs
+++ b/fusor-ember-cli/app/templates/review.hbs
@@ -1,18 +1,12 @@
 <div class="row tabbed_side_nav_form">
 
   <ul class="nav nav-pills nav-stacked col-md-3">
-      {{#unless isUpstream}}
-        {{#link-to 'subscriptions' tagName='li'}}
-          <a>{{stepNumberReview}}A. {{nameSelectSubscriptions}}</a>
-        {{/link-to}}
-      {{/unless}}
-
       {{#link-to 'review.installation' tagName='li' disabled=disableTabInstallation}}
-        <a>{{stepNumberReview}}B. Review Installation</a>
+        <a>{{stepNumberReview}}A. Review Installation</a>
       {{/link-to}}
 
       {{#link-to 'review.progress' tagName='li' disabled=disableTabProgress}}
-        <a>{{stepNumberReview}}C. Installation Progress</a>
+        <a>{{stepNumberReview}}B. Installation Progress</a>
       {{/link-to}}
   </ul>
 
