--- a/fusor-ember-cli/app/templates/where-install.hbs
+++ b/fusor-ember-cli/app/templates/where-install.hbs
@@ -2,16 +2,14 @@
   <div class='col-md-8 col-md-offset-1'>
 
     <div class='row'>
-      <h3>{{radio-button-f checked=whereInstallCf value="onOpenstack" label='Cloudforms on Openstack'}}</h3>
+      <h3>{{radio-button-f checked=whereInstallCf value="onOpenstack" label='Install on RHEV'}}</h3>
       <div class='col-md-offset-1'>
-        this means explanation text .....
       </div>
     </div>
 
     <div class='row'>
-      <h3>{{radio-button-f checked=whereInstallCf value="onRhev" label='Cloudforms on RHEV'}}</h3>
+      <h3>{{radio-button-f checked=whereInstallCf value="onRhev" label='Install on OpenStack'}}</h3>
       <div class='col-md-offset-1'>
-        this means explanation text .....
       </div>
     </div>
 
