--- a/fusor-ember-cli/app/templates/engine.hbs
+++ b/fusor-ember-cli/app/templates/engine.hbs
@@ -1,7 +1,7 @@
 <div class="row">
   </div class='col-md-12'>
 
-    <h4 style='padding-left:15px;'>Select Target Machine to Install Engine</h4>
+    <h4 style='padding-left:15px;'>Select One Target Machine to Install Engine:</h4>
 
     <ul class="nav nav-tabs col-md-12" data-tabs="pills">
         {{#link-to 'engine.discovered-host' tagName='li'}}
@@ -13,7 +13,7 @@
         {{!/link-to}}
     </ul>
     <div class="col-md-12">
-          {{outlet}}
+        {{outlet}}
     </div>
   </div>
 </div>
