--- a/fusor-ember-cli/app/templates/rhev-options.hbs
+++ b/fusor-ember-cli/app/templates/rhev-options.hbs
@@ -1,10 +1,13 @@
 <h4> Hypervisor Configuration </h4>
 
+<div class='row'>
   <div class='col-md-12'>
+    <br />
     <form class="form form-horizontal">
       {{text-f label="Hypervisor Host Name" value=hostAddress}}
     </form>
   </div>
+</div>
 
 <br />
 
@@ -14,29 +17,14 @@
   <div class='col-md-12'>
     <br />
     <form class="form form-horizontal">
-
       {{text-f label="Engine Host Name" value=engineHostName}}
       {{text-f label="Engine admin password" value=engineAdminPassword}}
-      {{!text-f label="Confirm admin password" value=engineConfirmAdminPassword}}
 
       {{text-f label="Datacenter Name" value=datacenterName placeholder='Leave blank for default'}}
       {{text-f label="Cluster Name" value=clusterName placeholder='Leave blank for default'}}
       {{text-f label="Storage name" value=storageName placeholder='Leave blank for default'}}
 
-      {{text-f label="CPU Type" value=cpuType placeholder='Leave blank for default' help-inline='TODO selection list'}}
-
-      {{!select-simple-f label="Application Mode" content=applicationModes}}
-
-      {{!select-simple-f label="Engine database location" content=engineLocation}}
-
-      {{!select-simple-f label="Automatically configure postgresql and create Engine database" content=dbSetup}}
-
-
-      {{!select-simple-f label="Set the application as the default page of the web server" content=yesNo}}
-
-      {{!select-simple-f label="Configure apache to use SSL using a certificate issued from the internal CA" content=dbSetup}}
-
-
+      {{text-f label="CPU Type" value=cpuType placeholder='Leave blank for default' help-inline=''}}
     </form>
   </div>
 </div>
