--- a/fusor-ember-cli/app/templates/satellite/index.hbs
+++ b/fusor-ember-cli/app/templates/satellite/index.hbs
@@ -3,9 +3,9 @@
     <br />
     <form class="form-horizontal" role="form">
 
-      {{text-f label="Name *" value=name inputSize='col-md-5' }}
+      {{text-f label="Name" value=name inputSize='col-md-5' }}
 
-      {{textarea-f label="Description" value=description inputSize='col-md-5' }}
+      {{textarea-f label="Description (Optional)" value=description inputSize='col-md-5' }}
 
       <div class='pull-right'>
         <br />
