--- a/ui/app/views/fusor_ui/placeholders/index.html.erb
+++ b/ui/app/views/fusor_ui/placeholders/index.html.erb
@@ -3,7 +3,7 @@
 <%= javascript('fusor_ui/vendor') %>
 <%= javascript('fusor_ui/fusor-ember-cli') %>
 
-<%= content_for(:title, _("Fusor Installer")) %>
+<%= content_for(:title, _("RHCI Installer")) %>
 
 <div id='ember-app'>
 </div>
