--- a/fusor-ember-cli/app/templates/components/text-f.hbs
+++ b/fusor-ember-cli/app/templates/components/text-f.hbs
@@ -1,6 +1,6 @@
 {{#base-f label=label labelSize=labelSize inputSize=inputSize help-inline=help-inline errors=errors}}
 
-  {{input class="form-control" value=value placeholder=placeholder type=typeInput focus-out="showErrors" id=cssId}}
+  {{input class="form-control" value=value placeholder=placeholder type=typeInput focus-out="showErrors" id=cssId maxlength=255}}
 
   {{#if showError}}
     {{#if errors.name}}
